Sun Aug 10 23:02:15 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * ace/SSL/SSL_SOCK_Stream.inl (set_handle):

          Reverted back to the C-style cast that was there before Jeff's commit
          because many compilers didn't like a reinterpret_cast<int> here.

Sat Aug  9 17:42:10 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * ace/SSL/SSL_SOCK_Acceptor.cpp:
        * ace/SSL/SSL_SOCK_Connector.cpp:
        * ace/SSL/SSL_SOCK_Stream.inl:
        * ace/SSL/SSL_SOCK_Stream.cpp:
        * examples/Service_Configurator/IPC-tests/server/Handle_R_Stream.inl:

          Fixed compile errors in inline=0 and Win32-ssl builds.
          ACE_Utils::truncate_cast can't cast ACE_HANDLE to int on Win32.

Fri Aug  8 20:35:37 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * ace/Stack_Trace.cpp:

          Glibc implementation: fixed whitespace
          VxWorks (both kernel and RTP): VxWorks can return -1 for the number
          of arguments when the actual number is unknown.

Fri Aug  8 19:33:42 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Message_Queue_T.cpp:
        * ace/SSL/SSL_Asynch_BIO.cpp:
        * ace/SSL/SSL_SOCK_Acceptor.cpp:
        * ace/SSL/SSL_Context.cpp:
        * ace/SSL/SSL_Asynch_Stream.cpp:
        * ace/SSL/SSL_SOCK_Connector.cpp:
        * ace/SSL/SSL_SOCK_Stream.cpp:
        * ace/SSL/SSL_SOCK_Stream.inl:
        * Kokyu/DSRT_Sched_Queue_T.cpp:
        * Kokyu/Default_Dispatcher_Impl.cpp:
        * ACEXML/common/Transcode.cpp:
        * ACEXML/common/HttpCharStream.cpp:
        * ACEXML/common/Mem_Map_Stream.cpp:
        * examples/Monitor/MC_Test_Utilities.cpp:
        * examples/Service_Configurator/IPC-tests/server/Handle_Timeout.inl:
        * examples/Service_Configurator/IPC-tests/server/Handle_Thr_Stream.cpp:
        * examples/Service_Configurator/IPC-tests/server/Handle_L_FIFO.inl:
        * examples/Service_Configurator/IPC-tests/server/Handle_Broadcast.inl: